--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background: pink;
+    background-color: pink;
 }
 
 .container {
@@ -28,8 +28,9 @@ body {
 }
 
 #answerContainer {
-   padding-top: 200px;
-   padding-bottom: 200px;
-   padding-left: 200px;
-   padding-right: 200px;
+    font-size: 20px;
+    padding-top: 150px;
+    padding-bottom: 200px;
+    padding-left: 200px;
+    padding-right: 200px;
 }
